시세 확인 기능 추가 -관리자용 실시간 대여 통계 확인 가능 RentalStats -유저용 검색 및 차트용 DailyStats
Daily는 성능 최적화를 위해 일 1회, 자정에만 update를 수행함.
원시 데이터는 Rental에서 보관함.

-추후 검색 최적화를 위한 기간 제한 기능 추가(ex: 일주일 단위로만 검색 가능합니다)
-판매자용 통계 보여주는 기능 추가(내가 판 물건 들의 통계를 보여줌.)